--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-</head>
-<body>
+    <title> Home Work 1 </title>
+    <body>
     <header>
-        <ul>
-        <li><a href="">WebStudio</a></li>
-    </ul>
-    <nav>
+        <nav>
+                <a lang="en" href="">WebStudio</a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -12,46 +10,49 @@
         </ul>
     </nav>
     <ul>
-        <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
-    </header>
-    <footer>
+    </header> 
     <main>
         <section>
             <h1 lang="ru">Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
         <section>
+                <h2 hidden>заголовок</h2>
+                <ul>
             <li>
-                <h2>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, <br>а также начало повседневной работы по <br>формированию позиции.</p>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности <br>же рамки и место обучения кадров <br>влечет за собой.</p>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация <br>с широким активом в значительной <br>степени обуславливает.</p>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько <br>очевидна, что реализация плановых <br>заданий.</p>
-            </h2>
-        </li>
-        </section>
-        <h2 lang="ru">Чем мы занимаемся</h2>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения,а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+            <h3>Пунктуальность</h3>
+            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+            <h3>Планирование</h3>
+            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+            </ul>
+            </section>
+            <section>
+        <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <img src="./images/kod.jpg" alt="написание кода элемента" width="370" height="294" </li>
+                <img src="./images/kod.jpg" alt="написание кода элемента" width="370" height="294" /> </li> 
             <li>
-                <img src="./images/programs.jpg" alt="изучение документации на сайте" width="370" height="294" </li>
+                <img src="./images/programs.jpg" alt="изучение документации на сайте" width="370" height="294" /> </li> 
             <li>
-                <img src="./images/corl.jpg" alt="выбор цвета" width="370" height="294" </li>
+                <img src="./images/corl.jpg" alt="выбор цвета" width="370" height="294" /> </li>
         </ul>
+        </section>
         <section>
-            <h2>
-                <h1 lang="ru">Наша команда</h1>
+                <h2>Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/man2.jpg " alt="Мужчина" width="270" height="260" />
@@ -73,14 +74,10 @@
                     <h3 lang="ru">Михаил Ермаков</h3>
                     <p lang="eu">UI Designer</p>
                 </li>
-                </h2>
                 </section>
                 </main>
-                </footer>
                 <footer>
-                    <ul>
-                    <li><a href="">WebStudio</a></li>
-                </ul>
+                    <a lang="en" href="">WebStudio</a>
                 <address>
                     <ul>
                     <li>
@@ -93,7 +90,8 @@
                     <li>
                         <a href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
-                    </ul>
-                </address>
-                </body>
-                </html>
+                </ul>
+            </address>
+        </footer>
+    </body>
+</html>
