--- a/index.html
+++ b/index.html
@@ -1,97 +1,115 @@
     <html>
-    <title> Home Work 1 </title>
+    <head>
+    <title> Home Work 2 </title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet" />
+    </head>
     <body>
-    <header>
-        <nav>
-                <a lang="en" href="">WebStudio</a>
-        <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+    <header class="header">
+        <nav class="header-navi">
+            <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
+        <ul class="header-list list">
+            <li class="header-item link">
+                <a class="header-link link" href="/index.html">Студия</a>
+            </li>
+            <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
         </ul>
     </nav>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="contact-list list">
+        <li class="contact-item">
+        <a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+        <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
+        </li>
     </ul>
     </header> 
     <main>
-        <section>
-            <h1 lang="ru">Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="main-work">
+            <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="main-btn" type="button">Заказать услугу</button>
         </section>
-        <section>
-                <h2 hidden>заголовок</h2>
-                <ul>
-            <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения,а также начало повседневной работы по формированию позиции.</p>
+        <section class="features">
+                <h2 class="features-title" hidden>заголовок</h2>
+                <ul class="features-list list">
+            <li class="features-item">
+            <h3 class="features-func">Внимание к деталям</h3>
+            <p class="features-text">Идейные соображения,а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li>
-            <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <li class="features-text">
+            <h3 class="features-func">Пунктуальность</h3>
+            <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
-            <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <li class="features-item">
+            <h3 class="features-func">Планирование</h3>
+            <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <li class="features-item">
+            <h3 class="features-func">Современные технологии</h3>
+            <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
             </ul>
             </section>
-            <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li>
+            <section class="about">
+        <h2 class="about-title">Чем мы занимаемся</h2>
+        <ul class="about-list list">
+            <li class="about-item">
                 <img src="./images/kod.jpg" alt="написание кода элемента" width="370" height="294" /> </li> 
-            <li>
+            <li class="about-item">
                 <img src="./images/programs.jpg" alt="изучение документации на сайте" width="370" height="294" /> </li> 
-            <li>
+            <li class="about-item">
                 <img src="./images/corl.jpg" alt="выбор цвета" width="370" height="294" /> </li>
         </ul>
         </section>
-        <section>
-                <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <section class="team">
+                <h2 class="team-title">Наша команда</h2>
+            <ul class="team-list list">
+                <li class="team-list">
                     <img src="./images/man2.jpg " alt="Мужчина" width="270" height="260" />
-                    <h3 lang="ru">Игорь Демьяненко</h3>
-                    <p lang="eu">Product Designer</p>
+                    <h3 class="team-personal">Игорь Демьяненко</h3>
+                    <p lang="eu" class="team-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/girl 1.jpg " alt="Мужчина" width="270" height="260" />
-                    <h3 lang="ru">Ольга Репина</h3>
-                    <p lang="eu">Frontend Developer</p>
+                    <h3 class="team-personal">Ольга Репина</h3>
+                    <p lang="eu" class="team-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/man 1.jpg " alt="Мужчина" width="270" height="260" />
-                    <h3 lang="ru">Николай Тарасов</h3>
-                    <p lang="eu">Marketing</p>
+                    <h3 class="team-personal">Николай Тарасов</h3>
+                    <p lang="eu" class="team-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/man3.jpg " alt="Мужчина" width="270" height="260" />
-                    <h3 lang="ru">Михаил Ермаков</h3>
-                    <p lang="eu">UI Designer</p>
+                    <h3 class="team-personal">Михаил Ермаков</h3>
+                    <p lang="eu" class="team-text">UI Designer</p>
                 </li>
-                </section>
-                </main>
-                <footer>
-                    <a lang="en" href="">WebStudio</a>
-                <address>
-                    <ul>
-                    <li>
-                        <a href="https://goo.gl/maps/Gt5WjNEcUj5eYQis8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+            </ul>
+            </section>
+            </main>
+            <section class="main-gig">
+            <footer class="footer-contacts link">
+                    <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
+                <address class="footer">
+                    <ul class="footer-list list">
+                    <li class="footer-item">
+                        <a href="https://goo.gl/maps/Gt5WjNEcUj5eYQis8" class="footer-address link">г. Киев, пр-т
+                            Леси
                             Украинки, 26</a>
                     </li>
-                    <li>
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="footer-item">
+                        <a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a>
                     </li>
-                    <li>
-                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="footer-item">
+                        <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
                     </li>
                 </ul>
+                </section>
             </address>
         </footer>
     </body>
