--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <html>
+<html>
     <head>
     <title> Home Work 2 </title>
     <link rel="stylesheet" href="./css/styles.css" />
@@ -12,7 +12,7 @@
             <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
         <ul class="header-list list">
             <li class="header-item link">
-                <a class="header-link link" href="/index.html">Студия</a>
+                <a class="logo-accent link"  href="/index.html">Студия</a>
             </li>
             <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Портфолио</a>
