--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,9 @@
 <html>
-<title> Portfolio </title>
-<link rel="stylesheet" href="/css/styles.css" />
-<body>
+    <head>
+    <title> Portfolio </title>
+    <link rel="stylesheet" href="/css/styles.css" />
+    </head>
+    <body>
     <header>
         <nav>
             <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
@@ -9,7 +11,7 @@
                 <li class="header-item link">
                     <a class="header-link link" href="/index.html">Студия</a></li>
                 <li class="header-item">
-                    <a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+                    <a class="logo-accent link" href="./portfolio.html">Портфолио</a></li>
                 <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
             </ul>
         </nav>
