--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,15 @@
-<html>
+    <html>
     <head>
     <title> Portfolio </title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
     <header>
         <nav>
-            <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
+            <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tet-accent">Studio</a>
             <ul class="header-list list">
                 <li class="header-item link">
                     <a class="header-link link" href="/index.html">Студия</a></li>
@@ -17,7 +20,7 @@
         </nav>
         <ul class="contact-list list">
             <li class="contact-item">
-                <a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a></li>
+                <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a></li>
             <li class="contact-item">
                 <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a></li>
         </ul>
@@ -32,8 +35,6 @@
                 <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
                 <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
             </ul>
-        </section>
-        <section class="work">
             <ul class="work-list list">
                 <li class="work-item">
                     <img src="./images/Komp.png" alt="Комп" width="370" alt="Технокряк" />
@@ -83,25 +84,25 @@
             </ul>
         </section>
     </main>
-    <section class="gig-work">
-    <footer>
-        <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
-        <address class="footer">
-            <ul class="footer-list list">
-                <li class="footer-item">
-                    <a href="https://goo.gl/maps/Gt5WjNEcUj5eYQis8" class="footer-address link">г. Киев, пр-т
-                        Леси
-                        Украинки, 26</a>
-                </li>
-                <li class="footer-item">
-                    <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
-                </li>
-                <li class="footer-item">
-                    <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+    <footer class="footer-contacts link">
+        <section class="main-work">
+            <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
+            <address class="footer">
+                <ul class="footer-list list">
+                    <li class="footer-item">
+                        <a href="https://goo.gl/maps/Gt5WjNEcUj5eYQis8" class="footer-address link">г. Киев, пр-т Леси
+                            Украинки, 26</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
         </section>
+        </address>
     </footer>
-</body>
-</html>
+    </body>
+
+    </html>
