--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<html>
+    <html>
     <head>
     <title> Home Work 2 </title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
     <header class="header">
         <nav class="header-navi">
-            <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
+            <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tet-accent">Studio</a>
         <ul class="header-list list">
             <li class="header-item link">
-                <a class="logo-accent link"  href="/index.html">Студия</a>
+            <a class="logo-accent link" href="/index.html">Студия</a>
             </li>
             <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Портфолио</a>
@@ -22,7 +22,7 @@
     </nav>
     <ul class="contact-list list">
         <li class="contact-item">
-        <a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
         </li>
         <li class="contact-item">
         <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
@@ -55,8 +55,8 @@
             </li>
             </ul>
             </section>
-            <section class="about">
-        <h2 class="about-title">Чем мы занимаемся</h2>
+            <section class="team">
+        <h2 class="team-title">Чем мы занимаемся</h2>
         <ul class="about-list list">
             <li class="about-item">
                 <img src="./images/kod.jpg" alt="написание кода элемента" width="370" height="294" /> </li> 
@@ -92,18 +92,16 @@
             </ul>
             </section>
             </main>
-            <section class="main-gig">
             <footer class="footer-contacts link">
+                <section class="main-work">
                     <a class="logo-text link" href=""><span class="logo-accent">Web<span class="tit-accent">Studio</a>
                 <address class="footer">
                     <ul class="footer-list list">
                     <li class="footer-item">
-                        <a href="https://goo.gl/maps/Gt5WjNEcUj5eYQis8" class="footer-address link">г. Киев, пр-т
-                            Леси
-                            Украинки, 26</a>
+                        <a href="https://goo.gl/maps/Gt5WjNEcUj5eYQis8" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
                     <li class="footer-item">
-                        <a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a>
+                        <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
                     </li>
                     <li class="footer-item">
                         <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
