--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     </body>
     </html>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
             <svg class="close-icon" width="18" height="18">
