--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
     </header>
     <main>
-        <section class="main-work">
+        <section class="main-work section">
             <div class="container main-container">
-                <h1 class="main-title">Эффективные решения <br> для вашего бизнеса</h1>
-                <button class="main-btn" type="button" data-modal-open">Заказать услугу</button>
+                <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+                <button class="main-btn" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <section class="section">
@@ -372,7 +372,7 @@
     </body>
     </html>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
             <svg class="close-icon" width="18" height="18">
