--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <html>
     <head>
-    <title> Home Work 5 </title>
+    <title> Home Work 6 </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -379,6 +379,64 @@
                 <use href="./images/icons.svg#icon-icon-close"></use>
             </svg>
         </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form action="#" class="modal-form">
+            <div class="modal-form-field">
+            <label for="user-name"class="modal-input-text">Имя</label>
+            <div class="modal-input-wrap">
+            <input 
+            type="text"
+            minlength="2" 
+            name="user-name" 
+            class="modal-input" 
+            required="required"
+            id="user-name"
+            />
+            <svg class="input-icon" width="18" height="18"> 
+                <use href="/images/icons.svg#icon-person-black"></use> 
+            </svg>
+            </div>
+            <label for="user-tel" class="modal-input-text">Телефон</label>
+            <div class="modal-input-wrap">
+            <input 
+            type="tel" 
+            name="user-tel" 
+            id="user-tel"
+            class="modal-input"
+            required 
+            />
+            <svg class="input-icon" width="18" height="18">
+                <use href="/images/icons.svg#icon-phone-black"></use>
+            </svg>
+            </div>
+            <label for="user-email" class="modal-input-text">Почта</label>
+            <div class="modal-input-wrap">
+            <input 
+            type="email" 
+            name="user-email" 
+            class="modal-input" 
+            required
+            />
+            <svg class="input-icon" width="18" height="18">
+                <use href="/images/icons.svg#icon-email-black"></use>
+            </svg>
+            </div>
+                <label for="user-text" class="modal-input-text">Комментарий</label>
+                <textarea 
+                name="user-text" 
+                id="user-text"
+                class="modal-text"
+                placeholder="Введите текст"
+                maxlength="10"
+            ></textarea>
+            </div>
+            </fieldset>
+            <div class="modal-form-field">
+                <input type="checkbox" name="policy" id="modal-check" class="modal-check">
+                <label for="modal-check" class="modal-check-text">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+            </div>
+            <button type="submit" class="btn modal-btn">Отправить</button> 
+        </form>
     </div>
     </div>
     <script src="./js/modal.js"></script>
