--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <html>
     <head>
-    <title> Home Work 5 </title>
+    <title> Home Work 6 </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -110,9 +110,9 @@
                     <li class="about-item">
                         <img src="./images/programs.jpg" alt="изучение документации на сайте" width="370"
                             height="294" />
-                            <div class="about-top">
-                                <p class="about-top-text">Мобильные приложения</p>
-                            </div>
+                        <div class="about-top">
+                            <p class="about-top-text">Мобильные приложения</p>
+                        </div>
                     </li>
                     <li class="about-item">
                         <img src="./images/corl.jpg" alt="выбор цвета" width="370" height="294" />
@@ -262,51 +262,51 @@
         </section>
         <section class="section">
             <div class="container">
-            <h2 class="client-title">Постоянные клиенты</h2>
-            <ul class="client-list list">
-                <li class="client-item">
-                    <a href="" class="client-link">
-                        <svg class="client-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-YA-CO"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="client-item">
-                    <a href="" class="client-link">
-                        <svg class="client-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-Company-Tagline-HERE"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="client-item">
-                    <a href="" class="client-link">
-                        <svg class="client-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-Company"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="client-item">
-                    <a href="" class="client-link">
-                        <svg class="client-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-Foster-PETERS"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="client-item">
-                    <a href="" class="client-link">
-                        <svg class="client-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-BRAND"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="client-item">
-                    <a href="" class="client-link">
-                        <svg class="client-icon" width="106" height="60">
-                            <use href="./images/icons.svg#icon-Company-TAGLINE"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+                <h2 class="client-title">Постоянные клиенты</h2>
+                <ul class="client-list list">
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-YA-CO"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Company-Tagline-HERE"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Foster-PETERS"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-BRAND"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Company-TAGLINE"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
             </li>
             </ul>
@@ -367,18 +367,55 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div>                
     </footer>
     </body>
     </html>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-            <button type="button" class="modal-close" data-modal-close>
+    <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
             <svg class="close-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-icon-close"></use>
             </svg>
         </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form action="#" class="modal-form">
+            <div class="modal-form-field">
+                <label for="user-name" class="modal-input-text">Имя</label>
+                <div class="modal-input-wrap">
+                    <input type="text" minlength="2" name="user-name" class="modal-input" required="required"
+                        id="user-name" />
+                    <svg class="input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-person-black"></use>
+                    </svg>
+                </div>
+                <label for="user-tel" class="modal-input-text">Телефон</label>
+                <div class="modal-input-wrap">
+                    <input type="tel" name="user-tel" id="user-tel" class="modal-input" required />
+                    <svg class="input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-phone-black"></use>
+                    </svg>
+                </div>
+                <label for="user-email" class="modal-input-text">Почта</label>
+                <div class="modal-input-wrap">
+                    <input type="email" name="user-email" class="modal-input" required />
+                    <svg class="input-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-email-black"></use>
+                    </svg>
+                </div>
+                <label for="user-text" class="modal-input-text">Комментарий</label>
+                <textarea name="user-text" id="user-text" class="modal-text" placeholder="Введите текст"
+                    maxlength="10"></textarea>
+            </div>
+            </fieldset>
+            <div class="modal-form-field">
+                <input type="checkbox" name="policy" id="modal-check" class="modal-check visually-hidden"/>
+                <label for="modal-check" class="modal-check-text">Соглашаюсь с рассылкой и принимаю Условия
+                    договора</label>
+            </div>
+            <button type="submit" class="btn modal-btn">Отправить</button>
+        </form>
     </div>
     </div>
     <script src="./js/modal.js"></script>
