--- a/index.html
+++ b/index.html
@@ -368,9 +368,7 @@
                 </ul>
             </div>
             <div class="footer-submit">
-                <h3 class="footer-submit-title">
-                    Подпишитесь на рассылку
-                </h3>
+                <h3 class="footer-submit-title">Подпишитесь на рассылку</h3>
                 <div class="submit">
                     <form class="footer-submit-form" action="#">
                         <input type="email" name="submit-email" 
