--- a/index.html
+++ b/index.html
@@ -368,17 +368,15 @@
                 </ul>
             </div>
             <div class="footer-submit">
-                <h3 class="footer-submit-title">Подпишитесь на рассылку</h3>
+                <p class="footer-submit-title">Подпишитесь на рассылку</p>
                 <div class="submit">
                     <form class="footer-submit-form" action="#">
                         <input type="email" name="submit-email" 
                         class="submit-input" placeholder="E-mail">
-                    <button class="footer-button" type="submit">
-                        Подписаться
+                    <button class="footer-button" type="submit">Подписаться</button>
                         <svg class="footer-button-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
                     </svg>
-                    </button>
                 </form>
                 </div>
             </div>
