--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <html>
+<html>
     <head>
     <title> Home Work 6 </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -369,18 +369,16 @@
             </div>
             <div class="footer-submit">
                 <p class="footer-submit-title">Подпишитесь на рассылку</p>
-                <div class="submit">
-                    <form class="footer-submit-form" action="#">
-                        <input type="email" name="submit-email" 
-                        class="submit-input" placeholder="E-mail">
-                    <button class="footer-button" type="submit">Подписаться</button>
+                <form action="#" class="footer-submit-form">
+                    <input type="email" class="submit-email" placeholder="E-mail" />
+                    <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
-                    </svg>
-                </form>
+                        </svg>
+                    </form>
                 </div>
             </div>
-        </div>                
+        </div>
     </footer>
     </body>
     </html>
@@ -423,7 +421,7 @@
             </div>
             </fieldset>
             <div class="modal-form-field">
-                <input type="checkbox" name="policy" id="modal-check" class="modal-check visually-hidden"/>
+                <input type="checkbox" name="policy" id="modal-check" class="modal-check visually-hidden" />
                 <label for="modal-check" class="modal-check-text">Соглашаюсь с рассылкой и принимаю Условия
                     договора</label>
             </div>
