--- a/portfolio.html
+++ b/portfolio.html
@@ -56,114 +56,114 @@
             </ul>
             <ul class="work-list list">
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img src="./images/Komp.png" width="370" alt="Технокряк" />
-                                <p class="masters-top-text">Технокряк это современная площадка распространения
-                                    коронавируса. Компании используют эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 class="work-title">Технокряк</h2>
-                                <p class="work-text">Веб-сайт</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img src="./images/Komp.png" width="370" alt="Технокряк" />
+                            <p class="masters-top-text">Технокряк это современная площадка распространения
+                                коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 class="work-title">Технокряк</h2>
+                            <p class="work-text">Веб-сайт</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img src="./images/Basketbol.png" width="370" alt="Постер New Orlean vs Golden Star" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 class="work-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
-                                <p class="work-text">Дизайн</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img src="./images/Basketbol.png" width="370" alt="Постер New Orlean vs Golden Star" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 class="work-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+                            <p class="work-text">Дизайн</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img src="./images/Akyla.png" width="370" alt="Ресторан Seafood" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 class="work-title">Ресторан <span lang="en">Seafood</span></h2>
-                                <p class="work-text">Приложение</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img src="./images/Akyla.png" width="370" alt="Ресторан Seafood" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 class="work-title">Ресторан <span lang="en">Seafood</span></h2>
+                            <p class="work-text">Приложение</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img src="./images/Nayshniki.png" width="370" alt="Проект Prime" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 class="work-title">Проект <span lang="en">Prime</span></h2>
-                                <p class="work-text">Маркетинг</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img src="./images/Nayshniki.png" width="370" alt="Проект Prime" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 class="work-title">Проект <span lang="en">Prime</span></h2>
+                            <p class="work-text">Маркетинг</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img src="./images/Korobka.png" width="370" alt="Проект Boxes" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 class="work-title">Проект <span lang="en">Boxes</span></h2>
-                                <p class="work-text">Приложение</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img src="./images/Korobka.png" width="370" alt="Проект Boxes" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 class="work-title">Проект <span lang="en">Boxes</span></h2>
+                            <p class="work-text">Приложение</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img lang="en" src="./images/Imac.png" width="370" alt="Inspiration has no Borders" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 lang="en" class="work-title">Inspiration has no Borders</h2>
-                                <p class="work-text">Веб-сайт</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img lang="en" src="./images/Imac.png" width="370" alt="Inspiration has no Borders" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 lang="en" class="work-title">Inspiration has no Borders</h2>
+                            <p class="work-text">Веб-сайт</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img src="./images/Kniga.png" width="370" alt="Издание Limited Edition" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 class="work-title">Издание <span lang="en">Limited Edition</span></h2>
-                                <p class="work-text">Издание <span lang="en">Limited Edition</span></p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img src="./images/Kniga.png" width="370" alt="Издание Limited Edition" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 class="work-title">Издание <span lang="en">Limited Edition</span></h2>
+                            <p class="work-text">Издание <span lang="en">Limited Edition</span></p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img src="./images/Itiketka.png" width="370" alt="Проект LAB" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 class="work-title">Проект <span lang="en">LAB</span></h2>
-                                <p class="work-text">Маркетинг</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img src="./images/Itiketka.png" width="370" alt="Проект LAB" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 class="work-title">Проект <span lang="en">LAB</span></h2>
+                            <p class="work-text">Маркетинг</p>
+                        </div>
+                    </a>
                 </li>
                 <li class="work-item">
-                        <a href="" class="item-focus-link link">
-                            <div class="masters-item-wrap">
-                                <img lang="en" src="./images/Imac 2.png" width="370" alt="Growing Business" />
-                                <p class="masters-top-text"></p>
-                            </div>
-                            <div class="mark-about">
-                                <h2 lang="en" class="work-title">Growing Business</h2>
-                                <p class="work-text">Приложение</p>
-                            </div>
-                        </a>
+                    <a href="" class="item-focus-link link">
+                        <div class="masters-item-wrap">
+                            <img lang="en" src="./images/Imac 2.png" width="370" alt="Growing Business" />
+                            <p class="masters-top-text"></p>
+                        </div>
+                        <div class="mark-about">
+                            <h2 lang="en" class="work-title">Growing Business</h2>
+                            <p class="work-text">Приложение</p>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -223,26 +223,18 @@
                 </li>
             </ul>
         </div>
-        <div class="footer-submit">
-            <h3 class="footer-submit-title">
-                Подпишитесь на рассылку
-            </h3>
-            <div class="submit">
-                <form class="footer-submit-form" action="#">
-                    <input type="email" name="submit-email" class="submit-input" placeholder="E-mail">
-                    <button class="footer-button" type="submit">
-                        Подписаться
+            <div class="footer-submit">
+                <p class="footer-submit-title">Подпишитесь на рассылку</p>
+                <form action="#" class="footer-submit-form">
+                    <input type="email" class="submit-email" placeholder="E-mail" />
+                    <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
                 </form>
             </div>
-        </div>
-    </div>
-    </footer>
-    </body>
-    </html>
+            </div>
     </footer>
     </body>
     </html>
