--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     <input type="email" class="submit-email" placeholder="E-mail" />
                     <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-send"></use>
+                            <use href="images/icons.svg#icon-icon-send"></use>
                         </svg>
                     </form>
                 </div>
@@ -394,40 +394,49 @@
         <form action="#" class="modal-form">
             <div class="modal-form-field">
                 <label for="user-name" class="modal-input-text">Имя</label>
-                <div class="modal-input-wrap">
-                    <input type="text" minlength="2" name="user-name" class="modal-input" required="required"
-                        id="user-name" />
+                <div class="input-modal-wrap">
+                    <input type="text" name="user-name" class="modal-input" id="user-name" required />
                     <svg class="input-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person-black"></use>
                     </svg>
                 </div>
+            </div>
+            <div class="modal-form-field">
                 <label for="user-tel" class="modal-input-text">Телефон</label>
-                <div class="modal-input-wrap">
-                    <input type="tel" name="user-tel" id="user-tel" class="modal-input" required />
+                <div class="input-modal-wrap">
+                    <input type="tel" name="user-tel" class="modal-input" id="user-tel" required />
                     <svg class="input-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-phone-black"></use>
                     </svg>
                 </div>
+            </div>
+            <div class="modal-form-field">
                 <label for="user-email" class="modal-input-text">Почта</label>
-                <div class="modal-input-wrap">
-                    <input type="email" name="user-email" class="modal-input" required />
+                <div class="input-modal-wrap">
+                    <input type="email" name="user-email" class="modal-input" id="user-email" />
                     <svg class="input-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-email-black"></use>
                     </svg>
                 </div>
-                <label for="user-text" class="modal-input-text">Комментарий</label>
-                <textarea name="user-text" id="user-text" class="modal-text" placeholder="Введите текст"
-                    maxlength="10"></textarea>
             </div>
-            </fieldset>
+            <div class="modal-form-field">
+                <label for="user-text" class="modal-input-text">Комментарий</label>
+                <textarea name="user-text" id="user-text" class="modal-text-area" placeholder="Введите текст"></textarea>
+            </div>
             <div class="modal-form-field">
                 <input type="checkbox" name="policy" id="modal-check" class="modal-check visually-hidden" />
-                <label for="modal-check" class="modal-check-text">Соглашаюсь с рассылкой и принимаю Условия
-                    договора</label>
+                <label for="modal-check" class="modal-check-text">
+                    <span>
+                        <svg class="icon-check" width="16" height="15">
+                            <use href="./images/icons.svg#icon-Vector"></use>
+                        </svg> 
+                    </span> Соглашаюсь с рассылкой и принимаю
+                    <a href="#" class="modal-check-link">Условия договора</a>
+                </label>
             </div>
-            <button type="submit" class="btn modal-btn">Отправить</button>
+            <button type="submit" class="main-btn form-btn">Отправить</button>
         </form>
-    </div>
-    </div>
+        </div>
+        </div>
     <script src="./js/modal.js"></script>
     </html>
