--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
                     <input type="email" class="submit-email" placeholder="E-mail" />
                     <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-iconsend"></use>
+                            <use href="./images/icons.svg#icon-icon-send"></use>
                         </svg>
                     </button>
                 </form>
