--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     <input type="email" class="submit-email" placeholder="E-mail" />
                     <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-icon-send"></use>
+                            <use href="./images/icons.svg#icon-send"></use>
                     </svg>
                 </form>
             </div>
