--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
             <div class="footer-submit">
                 <p class="footer-submit-title">Подпишитесь на рассылку</p>
-                <form action="#" class="footer-submit-form">
+                <form action="#" class="footer-submit-form" style="margin: 0;">
                     <input type="email" class="submit-email" placeholder="E-mail" />
                     <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
@@ -391,7 +391,7 @@
         </button>
         <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
         <form action="#" class="modal-form">
-            <div class="modal-form-field">
+            <div class="modal-form-fiel">
                 <label for="user-name" class="modal-input-text">Имя</label>
                 <div class="input-modal-wrap">
                     <input type="text" name="user-name" class="modal-input" id="user-name" required />
@@ -400,7 +400,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="modal-form-field">
+            <div class="modal-form-fiel">
                 <label for="user-tel" class="modal-input-text">Телефон</label>
                 <div class="input-modal-wrap">
                     <input type="tel" name="user-tel" class="modal-input" id="user-tel" required />
@@ -409,7 +409,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="modal-form-field">
+            <div class="modal-form-fiel">
                 <label for="user-email" class="modal-input-text">Почта</label>
                 <div class="input-modal-wrap">
                     <input type="email" name="user-email" class="modal-input" id="user-email" />
@@ -418,7 +418,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="modal-form-field">
+            <div class="modal-form-fiel">
                 <label for="user-text" class="modal-input-text">Комментарий</label>
                 <textarea name="user-text" id="user-text" class="modal-text-area" placeholder="Введите текст"></textarea>
             </div>
