--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
             <div class="footer-submit">
                 <p class="footer-submit-title">Подпишитесь на рассылку</p>
-                <form action="#" class="footer-submit-form" style="margin: 0;">
+                <form action="#" class="footer-submit-form">
                     <input type="email" class="submit-email" placeholder="E-mail" />
                     <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
@@ -418,7 +418,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="modal-form-fiel">
+            <div class="modal-form-fiels">
                 <label for="user-text" class="modal-input-text">Комментарий</label>
                 <textarea name="user-text" id="user-text" class="modal-text-area" placeholder="Введите текст"></textarea>
             </div>
