--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
             <div class="footer-submit">
                 <p class="footer-submit-title">Подпишитесь на рассылку</p>
-                <form action="#" class="footer-submit-form">
+                <form action="#" class="footer-submit-form" style="margin: 0;">
                     <input type="email" class="submit-email" placeholder="E-mail" />
                     <button type="submit" class="footer-button">Подписаться
                         <svg class="footer-button-icon" width="24" height="24">
